drone/agent-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: agent
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: agent
    spec:
      containers:
      - name: agent
        image: drone/agent:0.8
        volumeMounts:
          - mountPath: /var/run/docker.sock
            name: docker-socket
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
