drone/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: drone-server
        app: drone
    spec:
      containers:
      - name: drone-server
        image: drone/drone:1.0.0-rc.1
        volumeMounts:
        - mountPath: /var/lib/drone
          name: drone-lib
        - mountPath: /var/run/docker.sock
          name: docker-socket
      volumes:
      - name: drone-lib
        hostPath:
          path: /data/drone-1/lib
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
