drone/server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: drone-server
        app: drone
    spec:
      containers:
      - name: drone-server
        image: drone/drone:0.8
        volumeMounts:
        - mountPath: /var/lib/drone
          name: drone-lib
      volumes:
      - name: drone-lib
        hostPath:
          path: /data/drone/lib
