drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  labels:
    app: drone
spec:
  type: ClusterIP
  selector:
    app: drone
  ports:
  - name: http
    port: 80
    protocol: TCP
